提交打包代码

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "zhsw-pc",
+  "name": "UVE2-TS-TEMPLATE",
   "version": "0.1.0",
   "private": true,
+  "homepage":"./",
   "scripts": {
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
